# SALB

./: CMakeLists.txt  README.md
headers/: configurations.h  heisenberg.h  input_params.h  lattice.h  observable.h
init/: parameters.txt
scripts/: compute_job.sh  compute_job_intel.sh  prep_dir.py  run_params.sh
src/: SSE.cpp  configurations.cpp  heisenberg.cpp  input_params.cpp  lattice.cpp  observable.cpp
